<resources>
<string name="about_version">Version:</string>
<string name="aboutus1">Help us identify and locate invasive plant and animal species in your area using your Android phone.\n\nConservation efforts lack up-to-date information on the locations of weeds and pests and you can help by \&quot;tagging\&quot; locations of invasives using this application.\n\nThe National Park Service and local conservation members will use these location data to focus their removal efforts.</string>
<string name="aboutus2">Please visit our website for more information:</string>
<string name="aboutus2_5">http://whatsinvasive.com</string>
<string name="aboutus2_6">To report problems or to provide suggestions for improvement, please e-mails us at:</string>
<string name="aboutus2_7">egraham@cens.ucla.edu</string>
<string name="aboutus3">We are the Center for Embedded Networked Sensing (CENS) at the University of California, Los Angeles.\n</string>
<string name="aboutus4">Project participants:\n</string>
<string name="aboutusheader">About What\'s Invasive!</string>
<string name="app_name">What\'s Invasive</string>
<string name="app_url">market://search?q=pname:edu.ucla.cens.whatsinvasive</string>
<string name="area_list_fail">Failed to download list of parks.\n\nMake sure you have network coverage before trying again.</string>
<string name="area_list_retry_button">Retry</string>
<string name="area_list_timeout">No response</string>
<string name="area_list_updating">Updating areas</string>
<string name="area_list_updating_invasives">Updating invasives</string>
<string name="area_list_wait">Please wait.</string>
<string name="area_list_wait_images">Please wait while downloading invasives info and pictures.</string>
<string name="attempting_download_new_invasive">Attempting to download new invasives list...</string>
<string name="auto_upload_query">What\'s Invasive! for Android is designed to automatically upload user data to our What\'s Invasive servers. Would you like to set automatic upload on now? (Note: You can change this value later in Settings)</string>
<string name="base_url">sm.whatsinvasive.com</string>
<string name="camera_take_photo">Take photo by pressing camera button or center directional pad.</string>
<string name="cancel">Cancel</string>
<string name="confirm">Confirm</string>
<string name="credits">Jameel Al-Aziz\nChristy Brigham\nPatrick Crutcher\nDeborah Estrin\nEric Graham\nKyung Han\nJinha Kang\nCameron Ketcham\nOlmo Maldonado\nJeff Mascia\nKeith Mayoral\nNicolai Munk Petersen\nSasank Reddy\nEric Yuen</string>
<string name="done">Done</string>
<string name="dontremind">Don\'t Remind</string>
<string name="empty_queue_text">\nTo edit or delete your previous observations, please visit us at our webpage:</string>
<string name="empty_queue_text2">http://whatsinvasive.com</string>
<string name="empty_queue_text3">Thanks!</string>
<string name="feedback_tabs_all">All</string>
<string name="feedback_tabs_downloading">Downloading My What\'s Invasive statistics.</string>
<string name="feedback_tabs_latitude">Latitude:</string>
<string name="feedback_tabs_longitude">Longitude:</string>
<string name="feedback_tabs_my">My</string>
<string name="feedback_tabs_no_results">No Results Found</string>
<string name="feedback_tabs_park_id">Park ID:</string>
<string name="feedback_tabs_invasives">Invasives:</string>
<string name="feedback_tabs_photos">Photos:</string>
<string name="feedback_tabs_rank">Rank:</string>
<string name="feedback_tabs_statistics">Statistics</string>
<string name="feedback_tabs_top">Top collectors:</string>
<string name="help_main_number1">(1)</string>
<string name="help_main_number2">(2)</string>
<string name="help_main_para1">The \&quot;Map a Weed!\&quot; or \&quot;Map a Pest!\&quot; buttons are the main functions.</string>
<string name="help_main_para10">OTHER FEATURES</string>
<string name="help_main_para11">Automatic List of Parks</string>
<string name="help_main_para12">When connected, your phone will automatically download a list of participating parks.  If GPS is enabled, your phone will also automatically select the closest park.\n\nIf you wish to manually select a park from the list, go to:</string>
<string name="help_main_para13">MENU &gt; Settings &gt; Select Location</string>
<string name="help_main_para14">Automatic List of Weeds and/or Pests</string>
<string name="help_main_para15">Your phone will also download the current list of top invasives for you to look out for.  You will be automatically notified of a change in the list of weeds or pests.  To manually update the list, go to:</string>
<string name="help_main_para16">MENU &gt; Settings &gt; Invasives List</string>
<string name="help_main_para17">Automatic Upload</string>
<string name="help_main_para18">Your phone will upload your observations automatically.  You may turn off automatic upload if you have no reception or want to concerve battery life.</string>
<string name="help_main_para19">MENU &gt; Settings &gt; Enable upload</string>
<string name="help_main_para2">It will allow you to do two things:\n\n(1) See a list of the top invasives\n\n(2) Record an observation of an invasive.</string>
<string name="help_main_para20">Queue</string>
<string name="help_main_para21">Your observations are kept in the Queue for 1 minute to allow you to review and delete them before they are sent to our database.</string>
<string name="help_main_para22">MENU &gt; Queue</string>
<string name="help_main_para3">From the list of top invasives:</string>
<string name="help_main_para35">Touch the thumbnail photo of the invasive for more information.</string>
<string name="help_main_para3_0">After clicking the \&quot;Map a Weed!\&quot; or \&quot;Map a Pest!\&quot; button:</string>
<string name="help_main_para4">To record an observation of an invasive:</string>
<string name="help_main_para5">(a) Select the quantity of weeds or pests that you see.</string>
<string name="help_main_para6">(b) Select if you want to include a photo or include notes about your observation.</string>
<string name="help_main_para7">(c) Then touch the name of the invasive to make your observation!</string>
<string name="help_main_para8">The \&quot;My Results\&quot; button will take you to your personal statistics:</string>
<string name="help_main_para9">You can also switch between statistics for you and all participants after clicking the MENU button on the phone.</string>
<string name="help_main_title">Help for What\'s Invasive!</string>
<string name="help_main_title2">Main Help</string>
<string name="help_settings_1">Enable upload</string>
<string name="help_settings_10">If there are more than one user on your phone, you may switch users by resetting the login.</string>
<string name="help_settings_2">You may wish to turn off automatic upload if you are in an area with no reception or want to conserve battery life.\n\nOtherwise, your observations are automatically uploaded after 1 minute in the Queue.</string>
<string name="help_settings_3">Auto-location</string>
<string name="help_settings_4">When connected, your phone will automatically download a list of parks.\n\nIf GPS is enabled, your phone will automatically select the park closest to you and download its list of top invasives.\n\nThe selected park is displayed on the main page.</string>
<string name="help_settings_5">Select location</string>
<string name="help_settings_6">This will present a list of parks if you wish to manually select a park and turn off Auto-location.</string>
<string name="help_settings_7">Weed or Pest List</string>
<string name="help_settings_8">You will be automatically notified of any change in the list of top invasives. This option is then required to manually update the list.</string>
<string name="help_settings_9">Login</string>
<string name="help_settings_select_park">Select a park to download an invasives list. If GPS is enabled, the list includes only the ten closest parks to your current location. Check \"Show All Parks\" to show all the parks.</string>
<string name="help_settings_title">Settings Help</string>
<string name="help_tagging_num3">(3)</string>
<string name="help_tagging_para2">Select the quantity of weeds or pests that you see.</string>
<string name="help_tagging_para3">Select if you want to include a photo or add notes to your observation.</string>
<string name="help_tagging_para4">We recommend that you include at least one photo of each new invasive species you are recording.</string>
<string name="help_tagging_para5">Then touch the name of the invasive to make your observation!</string>
<string name="help_tagging_title">Observations Help</string>
<string name="location_setting_auto">(Auto)</string>
<string name="location_setting_manual">(Manual)</string>
<string name="locationservice_no_park">Unable to download invasive list. Park does not exist.</string>
<string name="login_invalid">Invalid username and password.</string>
<string name="login_loading">Loading</string>
<string name="login_login_button">Login</string>
<string name="login_password">Password</string>
<string name="login_please_wait">Please wait while logging in.</string>
<string name="login_register_button">Register New User</string>
<string name="login_reset_button">Reset</string>
<string name="login_retry_button">Retry</string>
<string name="login_timeout_msg">Login timed out.\n\nMake sure you have network coverage.</string>
<string name="login_timeout_title">Timeout</string>
<string name="login_username">User</string>
<string name="login_username_must_not_empty">The username and password cannot be empty.</string>
<string name="main_button_mappest">Pests</string>
<string name="main_button_nopests">No Pests Listed</string>
<string name="main_button_mapweed">Weeds</string>
<string name="main_button_noweeds">No Weeds Listed</string>
<string name="main_button_map">Map</string>
<string name="main_button_results">Results</string>
<string name="main_button_news">News</string>
<string name="main_button_iotw">IotW</string>
<string name="main_help_para2_1">It will allow you to do two things:</string>
<string name="main_help_para2_2">See the list of the top invasives.</string>
<string name="main_help_para2_3">Record an observation of an invasive.</string>
<string name="menu_about">About</string>
<string name="menu_main_help">Main Help</string>
<string name="menu_queue">Queue</string>
<string name="menu_settings">Settings</string>
<string name="menu_show_map">Show map</string>
<string name="note">Note</string>
<string name="note_hint">Enter note here</string>
<string name="preferences_category_upload">Upload</string>
<string name="preferences_title_upload_service_on">Enable Upload</string>
<string name="preferences_summary_upload_service_on">Enable or disable the upload service</string>
<string name="preferences_category_location">Location</string>
<string name="preferences_title_location_service_on">Enable Auto-Location</string>
<string name="preferences_summary_location_service_on">Enable or disable the auto-location service</string>
<string name="preferences_title_select_location">Select Location</string>
<string name="preferences_summary_select_location">Change your selected park</string>
<string name="preferences_title_refresh_lists">Refresh Lists</string>
<string name="preferences_summary_refresh_lists">Update to the latest invasives lists</string>
<string name="preferences_category_login">Login</string>
<string name="preferences_title_reset_login">Reset Login</string>
<string name="preferences_summary_reset_login">Change your login credentials</string>
<string name="preferences_category_debug">Debugging</string>
<string name="preferences_title_debug_mode">Debug Mode</string>
<string name="preferences_summary_debug_mode">Enable the collection of debugging information</string>
<string name="preferences_title_send_debug">Send Debug Info</string>
<string name="preferences_summary_send_debug">Send collection debugging information to the developers</string>
</resources>