<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"><TextView android:layout_height="wrap_content" android:text="@string/help_main_title2" android:layout_width="wrap_content" android:id="@+id/help_title" android:padding="8px" android:textColor="@color/white" android:textSize="26px"></TextView><Button android:id="@+id/Button01" android:layout_height="wrap_content" android:text="@string/done" android:visibility="visible" android:clickable="true" android:focusable="true" android:layout_width="75px" android:layout_alignParentRight="true" android:layout_centerVertical="false" android:layout_marginRight="5px" android:layout_marginTop="2px"></Button><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:id="@+id/ImageView00" android:layout_below="@+id/Button01"></ImageView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:id="@+id/ImageView000" android:layout_below="@+id/ImageView00" android:paddingTop="2px"></ImageView><ScrollView android:id="@+id/ScrollView01" android:isScrollContainer="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@+id/ImageView000">
		<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_height="fill_parent" android:layout_width="fill_parent">
			<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:text="@string/help_main_para1" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_below="@+id/ImageView00"></TextView>
		
<ImageView android:id="@+id/ImageView01" android:layout_below="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/main_help_button1" android:layout_centerInParent="true"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/ImageView01" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:text="@string/main_help_para2_1" android:id="@+id/TextView02_1"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:text="@string/help_main_number1" android:paddingLeft="10px" android:paddingTop="10px" android:width="35px" android:id="@+id/TextViewNum1_1" android:layout_below="@+id/TextView02_1" android:textColor="@color/yellow"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_toRightOf="@+id/TextViewNum1_1" android:text="@string/main_help_para2_2" android:layout_below="@+id/TextView02_1" android:id="@+id/TextView02_2"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:paddingLeft="10px" android:paddingTop="10px" android:width="35px" android:layout_below="@+id/TextView02_2" android:id="@+id/TextViewNum1_2" android:text="@string/help_main_number2" android:textColor="@color/yellow"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_below="@+id/TextView02_2" android:layout_toRightOf="@+id/TextViewNum1_2" android:id="@+id/TextView02_3" android:text="@string/main_help_para2_3"></TextView><ImageView android:id="@+id/ImageView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:layout_below="@+id/TextView02_3"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_below="@+id/ImageView02" android:id="@+id/TextView03_0" android:text="@string/help_main_para3_0"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:text="@string/help_main_number1" android:paddingLeft="10px" android:paddingTop="10px" android:width="35px" android:id="@+id/TextViewNum1" android:textColor="@color/yellow" android:layout_below="@+id/TextView03_0"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:text="@string/help_main_para3" android:id="@+id/TextView03" android:layout_toRightOf="@+id/TextViewNum1" android:layout_below="@+id/TextView03_0"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:width="200px" android:text="@string/help_main_para35" android:id="@+id/TextView035" android:layout_below="@+id/TextView03" android:layout_toRightOf="@+id/TextViewNum1"></TextView><ImageView android:layout_width="wrap_content" android:id="@+id/ImageView03" android:layout_height="wrap_content" android:src="@drawable/info_icon_big" android:layout_toRightOf="@+id/TextView035" android:layout_below="@+id/TextView03" android:layout_marginTop="40px"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:paddingLeft="10px" android:paddingTop="10px" android:width="35px" android:text="@string/help_main_number2" android:layout_below="@+id/TextView035" android:id="@+id/TextViewNum2" android:textColor="@color/yellow"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:id="@+id/TextView04" android:text="@string/help_main_para4" android:layout_below="@+id/TextView035" android:layout_toRightOf="@+id/TextViewNum2"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_below="@+id/TextView04" android:id="@+id/TextView05" android:text="@string/help_main_para5" android:width="200px" android:layout_toRightOf="@+id/TextViewNum2"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ImageView04" android:layout_toRightOf="@+id/TextView05" android:layout_below="@+id/TextView04" android:src="@drawable/main_help_quantity" android:layout_marginTop="20px"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_below="@+id/TextView05" android:id="@+id/TextView06" android:text="@string/help_main_para6" android:width="200px" android:layout_toRightOf="@+id/TextViewNum2"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ImageView05" android:src="@drawable/main_help_photo" android:layout_below="@+id/TextView05" android:layout_toRightOf="@+id/TextView06" android:layout_marginTop="20px"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_below="@+id/TextView06" android:id="@+id/TextView07" android:text="@string/help_main_para7" android:textStyle="bold" android:layout_toRightOf="@+id/TextViewNum2"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:layout_below="@+id/TextView07" android:id="@+id/ImageView06"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:id="@+id/TextView08" android:text="@string/help_main_para8" android:layout_below="@+id/ImageView06"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" android:layout_below="@+id/TextView08" android:id="@+id/ImageView07" android:src="@drawable/main_help_results"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10px" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_below="@+id/ImageView07" android:id="@+id/TextView09" android:text="@string/help_main_para9"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:layout_below="@+id/TextView09" android:id="@+id/ImageView08"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_below="@+id/ImageView08" android:id="@+id/TextView10" android:text="@string/help_main_para10" android:textStyle="bold" android:layout_centerInParent="true" android:paddingBottom="0px" android:paddingTop="10px"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_below="@+id/TextView10" android:id="@+id/TextView11" android:text="@string/help_main_para11" android:textStyle="bold" android:paddingLeft="10px" android:paddingRight="10px" android:paddingTop="10px"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:text="@string/help_main_para12" android:id="@+id/TextView12" android:layout_below="@+id/TextView11" android:paddingLeft="10px" android:paddingRight="10px" android:paddingBottom="10px"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:layout_below="@+id/TextView12" android:id="@+id/TextView13" android:text="@string/help_main_para13" android:textStyle="italic" android:textColor="@color/yellow" android:paddingTop="10px" android:paddingBottom="10px" android:layout_centerHorizontal="true"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:paddingLeft="10px" android:paddingRight="10px" android:layout_below="@+id/TextView13" android:id="@+id/TextView14" android:paddingTop="10px" android:textStyle="bold" android:text="@string/help_main_para14"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:paddingLeft="10px" android:paddingRight="10px" android:layout_below="@+id/TextView14" android:id="@+id/TextView15" android:paddingBottom="10px" android:text="@string/help_main_para15"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textStyle="italic" android:textColor="@color/yellow" android:paddingTop="10px" android:paddingBottom="10px" android:layout_below="@+id/TextView15" android:id="@+id/TextView16" android:text="@string/help_main_para16" android:layout_centerHorizontal="true"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:paddingLeft="10px" android:paddingRight="10px" android:layout_below="@+id/TextView16" android:id="@+id/TextView17" android:paddingTop="10px" android:text="@string/help_main_para17" android:textStyle="bold"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:paddingLeft="10px" android:paddingRight="10px" android:layout_below="@+id/TextView17" android:id="@+id/TextView18" android:paddingBottom="10px" android:text="@string/help_main_para18"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textStyle="italic" android:textColor="@color/yellow" android:paddingTop="10px" android:paddingBottom="10px" android:layout_below="@+id/TextView18" android:id="@+id/TextView19" android:text="@string/help_main_para19" android:layout_centerHorizontal="true"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:paddingLeft="10px" android:paddingRight="10px" android:layout_below="@+id/TextView19" android:id="@+id/TextView20" android:paddingTop="10px" android:textStyle="bold" android:text="@string/help_main_para20"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:paddingLeft="10px" android:paddingRight="10px" android:layout_below="@+id/TextView20" android:id="@+id/TextView21" android:paddingBottom="10px" android:text="@string/help_main_para21"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textStyle="italic" android:textColor="@color/yellow" android:paddingTop="10px" android:paddingBottom="10px" android:layout_centerHorizontal="true" android:layout_below="@+id/TextView21" android:id="@+id/TextView22" android:text="@string/help_main_para22"></TextView>
</RelativeLayout>
	</ScrollView>
</RelativeLayout>
