<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"><TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/help_title" android:textColor="@color/white" android:layout_alignParentLeft="true" android:padding="8px" android:layout_centerVertical="false" android:layout_alignParentTop="true" android:textSize="26px" android:text="@string/help_settings_title"></TextView><Button android:id="@+id/Button01" android:layout_height="wrap_content" android:text="@string/done" android:visibility="visible" android:clickable="true" android:focusable="true" android:layout_width="75px" android:layout_alignParentRight="true" android:layout_below="@+id/ImageView07" android:layout_marginRight="5px" android:layout_marginTop="2px"></Button><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:id="@+id/ImageView00" android:layout_below="@+id/Button01"></ImageView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:id="@+id/ImageView000" android:layout_below="@+id/ImageView00" android:paddingTop="2px"></ImageView><ScrollView android:id="@+id/ScrollView01" android:isScrollContainer="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@+id/ImageView000">
		<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical">
			<TextView android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:text="@string/help_settings_1" android:textStyle="bold" android:paddingLeft="10px" android:paddingRight="10px" android:paddingTop="10px" android:layout_width="fill_parent" android:id="@+id/settings01"></TextView>
			<TextView android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:text="@string/help_settings_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingBottom="10px" android:paddingLeft="10px" android:paddingRight="10px" android:id="@+id/settings02"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:id="@+id/ImageView01"></ImageView><TextView android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:textStyle="bold" android:paddingLeft="10px" android:paddingRight="10px" android:paddingTop="10px" android:layout_width="fill_parent" android:text="@string/help_settings_3" android:id="@+id/settings03"></TextView><TextView android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingBottom="10px" android:paddingLeft="10px" android:paddingRight="10px" android:text="@string/help_settings_4" android:id="@+id/settings04"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:id="@+id/ImageView02"></ImageView><TextView android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:textStyle="bold" android:paddingLeft="10px" android:paddingRight="10px" android:paddingTop="10px" android:layout_width="fill_parent" android:id="@+id/settings05" android:text="@string/help_settings_5"></TextView><TextView android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingBottom="10px" android:paddingLeft="10px" android:paddingRight="10px" android:id="@+id/settings06" android:text="@string/help_settings_6"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:id="@+id/ImageView03"></ImageView><TextView android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:textStyle="bold" android:paddingLeft="10px" android:paddingRight="10px" android:paddingTop="10px" android:layout_width="fill_parent" android:id="@+id/settings07" android:text="@string/help_settings_7"></TextView><TextView android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingBottom="10px" android:paddingLeft="10px" android:paddingRight="10px" android:id="@+id/settings08" android:text="@string/help_settings_8"></TextView><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/line_portrait" android:id="@+id/ImageView04"></ImageView><TextView android:layout_height="wrap_content" android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:textStyle="bold" android:paddingLeft="10px" android:paddingRight="10px" android:paddingTop="10px" android:layout_width="fill_parent" android:id="@+id/settings09" android:text="@string/help_settings_9"></TextView><TextView android:textSize="@dimen/twozero_sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingBottom="10px" android:paddingLeft="10px" android:paddingRight="10px" android:id="@+id/settings10" android:text="@string/help_settings_10"></TextView>

</LinearLayout>
	</ScrollView>
</RelativeLayout>
