<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:minWidth="400dp" android:minHeight="400dp">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/note"/>
	<EditText android:id="@+id/body" android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:scrollbars="vertical" android:gravity="top|left" android:hint="@string/note_hint" 
		android:saveEnabled="true" android:inputType="text|textAutoCorrect|textMultiLine"/>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center">
		<Button android:id="@+id/confirm" 
		  android:text="@string/confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginRight="2dip"/>
		<Button android:id="@+id/cancel" 
		  android:text="@string/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="2dip"/>
	</LinearLayout>
</LinearLayout>